# sot-pattern-generator

include/sot/pattern-generator/: pg.h
src/: pg.cpp
tests/: CMakeLists.txt  main.cc
